Fix browser compatibility issue on firefox and improve spacing on smaller screens

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,14 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=more_vert");
-@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200");
-@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200");
-@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=circle");
-@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=check_circle");
-@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=today");
-@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=star");
-@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=date_range");
-@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=hourglass_disabled");
-@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=inbox");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap");
 :root {
   --bg-primary: #1a1a1a;
@@ -83,7 +72,7 @@ aside {
   flex-shrink: 0;
   display: flex;
   flex-direction: column;
-  padding: clamp(1rem, 2vw, 2rem);
+  padding: 2rem;
   background-color: var(--bg-secondary);
   gap: 1rem;
 }
@@ -184,7 +173,7 @@ aside > div > h2 {
   flex-grow: 1;
   flex-shrink: 1;
   background-color: var(--bg-primary);
-  padding: 1rem clamp(1rem, 4vw, 3rem);
+  padding: 3rem;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -612,10 +601,11 @@ footer p {
 .uncheckedCircle,
 .checkedCircle,
 .menuSpan {
+  font-family: 'Material Symbols Outlined';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-@media (max-width: 600px) {
+@media (max-width: 620px) {
   main {
     flex-direction: column;
   }
@@ -627,5 +617,11 @@ footer p {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+  }
+  aside{
+    padding: 1rem 3rem;
+  }
+  .content{
+    padding:3rem;
   }
 }
